--- a/package.json
+++ b/package.json
@@ -1,5 +1,11 @@
 {
+  "scripts": {
+    "db:ui": " npx prisma studio --schema='prisma/deploy-output/schema.prisma'",
+    "dev":"npx tsx --watch src/server.ts",
+    "test":"npx vitest --run"
+  },
   "dependencies": {
+    "@faker-js/faker": "^9.2.0",
     "@types/node": "^22.9.3",
     "fastify": "^5.1.0",
     "prisma": "^5.22.0",
