--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "scripts": {
     "db:ui": " npx prisma studio --schema='prisma/deploy-output/schema.prisma'",
-    "dev":"npx tsx --watch src/server.ts",
-    "test":"npx vitest --run"
+    "dev": "npx tsx --watch src/server.ts",
+    "test": "npx vitest --run"
   },
   "dependencies": {
     "@faker-js/faker": "^9.2.0",
@@ -11,6 +11,7 @@
     "prisma": "^5.22.0",
     "tsx": "^4.19.2",
     "typescript": "^5.7.2",
-    "vitest": "^2.1.5"
+    "vitest": "^2.1.5",
+    "zod": "^3.23.8"
   }
 }
