--- a/package.json
+++ b/package.json
@@ -6,8 +6,11 @@
   },
   "dependencies": {
     "@faker-js/faker": "^9.2.0",
+    "@fastify/swagger": "^9.4.0",
+    "@fastify/swagger-ui": "^5.2.0",
     "@types/node": "^22.9.3",
     "fastify": "^5.1.0",
+    "fastify-swagger": "^5.2.0",
     "prisma": "^5.22.0",
     "string-similarity": "^4.0.4",
     "tsx": "^4.19.2",
