--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@fastify/swagger": "^9.4.0",
     "@fastify/swagger-ui": "^5.2.0",
     "@types/node": "^22.9.3",
+    "dotenv": "^16.4.7",
     "fastify": "^5.1.0",
     "fastify-swagger": "^5.2.0",
     "prisma": "^5.22.0",
