--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   },
   "version": "1.5.9",
   "author": {
-    "name": "Thierrir Alencar da Silva","email": "thierriralencar1614@gmail.com"
+    "name": "Thierrir Alencar da Silva",
+    "email": "thierriralencar1614@gmail.com"
   },
   "description": "A API To provide fullscale suport do price tracking features",
   "dependencies": {
@@ -15,9 +16,11 @@
     "@fastify/swagger": "^9.4.0",
     "@fastify/swagger-ui": "^5.2.0",
     "@types/node": "^22.9.3",
+    "@types/nodemailer": "^6.4.17",
     "dotenv": "^16.4.7",
     "fastify": "^5.1.0",
     "fastify-swagger": "^5.2.0",
+    "nodemailer": "^6.9.16",
     "prisma": "^5.22.0",
     "string-similarity": "^4.0.4",
     "tsx": "^4.19.2",
